<resources>
    <string name="app_name">TendenciesExercici1</string>
    <string name="hello_world">Hello World</string>
    <string name="hello">Hola</string>
    <string name="done">Done</string>
    <string name="header">HEADER</string>
    <string name="titulo1">titulo 1</string>
    <string name="titulo2">titulo 2</string>
    <string name="texto3">text 3</string>
    <string name="button33">33%</string>
    <string name="button66">66%</string>
    <string name="button10">10%</string>
    <string name="User">User</string>
    <string name="hintUser">Username</string>
    <string name="Password">Password</string>
    <string name="hintPassword">******</string>
    <string name="Accept">Accept</string>
    <string name="textRecover">Recover your password</string>
    <string name="hintRecover">Email</string>
    <string name="Back">Back</string>
</resources>
