<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="100dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/User"
        android:layout_marginRight="40dp"
        android:textSize="28sp"
        android:id="@+id/textUser"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textUser"
        android:layout_marginRight="40dp"
        android:hint="@string/hintUser"
        android:id="@+id/fieldUser"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginRight="50dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/fieldUser"
        android:textSize="28sp"
        android:id="@+id/textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPassword"
        android:layout_marginRight="40dp"
        android:hint="@string/hintPassword"
        android:id="@+id/fieldPassword"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Accept"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
