<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textRecover"
        android:id="@+id/textRecover"
        android:layout_marginHorizontal="40dp"
        android:textSize="28sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/textRecover"
        android:hint="@string/hintRecover"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal = "16dp"
        android:paddingVertical="13dp"
        android:weightSum="1">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="8dp"
            android:onClick="BackToMain"
            android:text="@string/Back"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="8dp"
            android:text="@string/Accept"/>
    </LinearLayout>

</RelativeLayout>