<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="8dp"/>
        <ImageView
            android:id="@+id/imageRight"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="8dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/header"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@id/imageRight"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="12dp"/>

        <TextView
            android:id="@+id/titulo1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/titulo1"
            android:textSize="24sp"
            android:layout_margin="12dp"
            android:layout_toRightOf="@id/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/titulo2"
            android:textSize="24sp"
            android:layout_margin="12dp"
            android:layout_toRightOf="@id/image"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:text="@string/texto3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.33"
            android:text="@string/button33"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.66"
            android:onClick="RecoverScreen"
            android:text="@string/button66"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="0.34"
            android:weightSum="0.34">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:onClick="LoginScreen"
                android:text="@string/button10"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
