<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="8dp"/>
        <ImageView
            android:id="@+id/imageRight"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="8dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/header"
            android:textSize="24sp"
            android:layout_margin="8dp"
            android:layout_toLeftOf="@id/imageRight"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">
        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="12dp"/>

        <TextView
            android:id="@+id/titulo1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/titulo1"
            android:textSize="24sp"
            android:layout_margin="12dp"
            android:layout_toRightOf="@id/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/titulo2"
            android:textSize="24sp"
            android:layout_margin="12dp"
            android:layout_toRightOf="@id/image"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="24sp"
        android:text="@string/text3"/>

</LinearLayout>